Update 'Daum Dictionary'
Concurrently open pop-up window if other window already exists.

--- a/daum-dictionary/src/info.plist
+++ b/daum-dictionary/src/info.plist
@@ -34,7 +34,7 @@
 			<key>config</key>
 			<dict>
 				<key>concurrently</key>
-				<false/>
+				<true/>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
